# hass-component-systemair

./: README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
custom_components/systemair/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  pyproject.toml  services.yaml
custom_components/systemair/pysystemair/: const.py  models.py  pysystemair.py
systemair/: __init__.py  climate.py  const.py  manifest.json
