[tool.poetry]
name = "custom_components"
version = "0.1.0"
description = ""
authors = ["mvheimburg <Martin.Heimburg@sintef.no>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.971"
pysystemair = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
