[tool.poetry]
name = "pysystemair"
version = "0.1.0"
description = "Python package to interface a SystamAir SAVE VTR ventilation through modbus. Heavily insipired by pyflexi (https://github.com/Sabesto/pyflexit). Made with the purpose of working with a home assistant component"
authors = ["mvheimburg <heimburg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.961"
asyncio = "^3.4.3"
pydantic = "^1.9.1"
pydantic-yaml = {extras = ["ruamel"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
